update index html to use shard title

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>babylonjs + colyseus</title>
+    <title>shard ⬖</title>
   </head>
   <body>
     <canvas id="game"></canvas>
